--- a/KeyAndAddressGeneration.ipynb
+++ b/KeyAndAddressGeneration.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -81,8 +81,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Private Key (hex) is:  177ff4a44d8c27f05647a9ac1a3f60cf432fbfb6a307e01e3f5b0f3878ded2b3\n",
-      "Private Key (decimal) is:  10629273550348555349901460848557787944580676248330772490612016919618250527411\n"
+      "Private Key (hex) is:  74aa2d7005c6ca35d984909e6c92b54d12e56bcee9d1d2530b3214077c1dabe7\n",
+      "Private Key (decimal) is:  52768968035379197557011894362445467348230111513482723769694806933452764326887\n"
      ]
     }
    ],
@@ -109,14 +109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Private Key (WIF) is:  5HzdrRtN4NeqNHUihoCYR6EVjFUDQh7HHa97ssQikizpZruJour\n"
+      "Private Key (WIF) is:  5JhfdGWR2jsC3en3ydHt3gRXuyMfH8Tv9s3jR4RJNjT5SdEspfG\n"
      ]
     }
    ],
@@ -131,14 +131,14 @@
    "source": [
     "\n",
     "We add suffix \"01\" to the original private key to create a \"compressed\" private key. Basically, adding \"01\" does not compress anything; it's just a signal for the wallet software to use that private key for generating compressed public keys ONLY. The goal is to keep compatibility of newer wallets with the old ones, which don't manage \"compressed\" keys.\n",
-    "More info on \"compression\" below. \n",
+    "More info on \"compression\" later. \n",
     "\n",
     "We can also generate a WIF format from the compressed private key (WIF-compressed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -159,8 +159,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Private Key Compressed (hex) is:  177ff4a44d8c27f05647a9ac1a3f60cf432fbfb6a307e01e3f5b0f3878ded2b301\n",
-      "Private Key (WIF-Compressed) is:  Kx1PfAqhwtZzUwjM54uwfL6ZoUs7ma2it9GqMXVhHzNCwvXk88XL\n"
+      "Private Key Compressed (hex) is:  74aa2d7005c6ca35d984909e6c92b54d12e56bcee9d1d2530b3214077c1dabe701\n",
+      "Private Key (WIF-Compressed) is:  L18VV5Sq4gCXkhjr8wBWJq1HSokBxBwoc7u4DC6FgvN6bvGUKD5R\n"
      ]
     }
    ],
@@ -177,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# From Private Key to Public Key\n",
+    "## From Private Key to Public Key\n",
     "\n",
     "We multiply the private key and the Elliptic Curve generator point G, `bitcoin.G`. The result is a point that will be used as public key. \n",
     "\n",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -200,7 +200,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Public Key (x,y) is: (34659121358656894097978999572154392346265186598154399035690715714022049873667, 41970595200530075582395168597798444714875162052094091273249293293219026042389)\n"
+      "Public Key (x,y) is: (84551749791378058759161044215878790059457155740614437701040833396874189037427, 91544650867420438028701066509197935931917464453383700104076741169177559292299)\n"
      ]
     }
    ],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -232,8 +232,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO - The x component in hex is: 0x4ca05e1535a30e4f909950e43fa681b0a9857bb9c76ef42fad584e6a07747f03\n",
-      "The y component in hex is: 0x5cca83daa87e90e2828f20efea71317db5ae04e26d70cf922a6afccf9af7fe15\n"
+      "INFO - The x component in hex is: 0xbaee982fc68ff211dfe809c06b0eec78fa3ed468e6bc196dd24eabe6abb55f73\n",
+      "The y component in hex is: 0xca646fac9984f06fae2fc3298e69cd996d1692fcfbc74f9279e0697f6193d98b\n"
      ]
     },
     {
@@ -241,7 +241,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Public Key (hex) is: 044ca05e1535a30e4f909950e43fa681b0a9857bb9c76ef42fad584e6a07747f035cca83daa87e90e2828f20efea71317db5ae04e26d70cf922a6afccf9af7fe15\n"
+      "Public Key (hex) is: 04baee982fc68ff211dfe809c06b0eec78fa3ed468e6bc196dd24eabe6abb55f73ca646fac9984f06fae2fc3298e69cd996d1692fcfbc74f9279e0697f6193d98b\n"
      ]
     }
    ],
@@ -260,14 +260,14 @@
     "### On \"compression\"\n",
     "\n",
     "The public key is a point, as you see, but we can manage with only the x component.\n",
-    "\"Compression\" makes reference to the process of taking only the x component of the (x,y) pair that forms the public key. Every use of \"compression\" refers to that process. For instance, a \"compressed private key\" is one that will be used only for generating compressed public keys.\n",
+    "\"Compression\" makes reference to the process of using only the x component of the (x,y) pair that forms the public key. Every use of \"compression\" refers to that process. For instance, a \"compressed private key\" is one that will be used only for generating compressed public keys.\n",
     "\n",
     "So now we compress the public key, adjusting prefix depending on whether $y$ is even or odd."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -280,7 +280,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Compressed Public Key (hex) is: 034ca05e1535a30e4f909950e43fa681b0a9857bb9c76ef42fad584e6a07747f03\n"
+      "Compressed Public Key (hex) is: 03baee982fc68ff211dfe809c06b0eec78fa3ed468e6bc196dd24eabe6abb55f73\n"
      ]
     }
    ],
@@ -295,14 +295,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generation of the bitcoin address from the public key\n",
+    "## Generation of the bitcoin address from the public key\n",
     "\n",
-    "Finally, we will generate the address that corresponds to the public key."
+    "Finally, we will generate the address that corresponds to the public key. This will be in b58check, which is done by double hashing, adding a checksum, etc. It's the base for creating bitcoin QR images."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -316,7 +316,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO - Generating address in b58check for our public key: (34659121358656894097978999572154392346265186598154399035690715714022049873667, 41970595200530075582395168597798444714875162052094091273249293293219026042389)\n"
+      "INFO - Generating address in b58check from our public key (84551749791378058759161044215878790059457155740614437701040833396874189037427, 91544650867420438028701066509197935931917464453383700104076741169177559292299)\n"
      ]
     },
     {
@@ -324,12 +324,12 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Bitcoin Address (b58check) is: 1KGsnJeLYJHd7nZbUCmT65riEkMwjakbLE\n"
+      "Bitcoin Address (b58check) is: 1FFFXdiVbjrQAH2HykeU6VFaKaTwVurTf5\n"
      ]
     }
    ],
    "source": [
-    "logging.info(\"Generating address in b58check for our public key \" + str(public_key))\n",
+    "logging.info(\"Generating address in b58check from our public key \" + str(public_key))\n",
     "print(\"\\nBitcoin Address (b58check) is:\", bitcoin.pubkey_to_address(public_key))"
    ]
   },
@@ -337,12 +337,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The address is now compressed (meaning: it will be generated from the compressed public key, the one with x component only)."
+    "The address will be compressed next (meaning: it will be generated from the compressed public key, the one with x component only)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -356,7 +356,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO - Generating compressed address, from our compressed public key 034ca05e1535a30e4f909950e43fa681b0a9857bb9c76ef42fad584e6a07747f03\n"
+      "INFO - Generating compressed address from our compressed public key 03baee982fc68ff211dfe809c06b0eec78fa3ed468e6bc196dd24eabe6abb55f73\n"
      ]
     },
     {
@@ -364,12 +364,12 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Compressed Bitcoin Address (b58check) is: 16SgUhMX3R49CmUNyyvRTahAB2V6a5DqsH\n"
+      "Compressed Bitcoin Address (b58check) is: 1AS1RvCi3uVN7VJeAZeQ2frCFm968pSBfi\n"
      ]
     }
    ],
    "source": [
-    "logging.info(\"Generating compressed address, from our compressed public key \" + hex_compressed_public_key)\n",
+    "logging.info(\"Generating compressed address from our compressed public key \" + hex_compressed_public_key)\n",
     "\n",
     "print(\"\\nCompressed Bitcoin Address (b58check) is:\", bitcoin.pubkey_to_address(hex_compressed_public_key))"
    ]
@@ -380,7 +380,7 @@
     "id": "idB0V-DavVnl"
    },
    "source": [
-    "Please note that the address generated is different depending if we started with the (x,y) public key or with the compressed (x) one. The wallet software must take care for the compatibility between old non-compressed addresses and compressed ones, by looking at the \"01\" suffix in the private key.\n",
+    "Please note that **the address generated is different if we started with the (x,y) public key or with the compressed (x) one.** The wallet software must take care for the compatibility between old non-compressed addresses and compressed ones, by looking at the \"01\" suffix in the private key.\n",
     "\n",
     "And that's all !"
    ]
